[gd_scene load_steps=3 format=2]

[ext_resource path="res://Screens/World.gd" type="Script" id=1]
[ext_resource path="res://Screens/MainScreens.tscn" type="PackedScene" id=2]

[node name="World" type="Node"]
script = ExtResource( 1 )

[node name="MainScreens" parent="." instance=ExtResource( 2 )]
[connection signal="new_game" from="MainScreens" to="." method="_on_MainScreens_new_game"]
