[gd_scene load_steps=7 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://UI/Screens.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/audio/Music_Light-Puzzles.ogg" type="AudioStream" id=4]
[ext_resource path="res://UI/Background.tscn" type="PackedScene" id=5]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_intensity = 0.37
glow_blend_mode = 0
glow_hdr_threshold = 0.64

[node name="World" type="Node"]
script = ExtResource( 1 )

[node name="Background" parent="." instance=ExtResource( 5 )]

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 616.819 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 237.81, 618.596 )
offset = Vector2( 0, -200 )
current = true
smoothing_enabled = true

[node name="Screens" parent="." instance=ExtResource( 2 )]

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )
[connection signal="start_game" from="Screens" to="." method="_on_Screens_start_game"]
